[gd_scene load_steps=3 format=3 uid="uid://djhbg6qw1gwnl"]

[ext_resource type="Script" path="res://main.gd" id="1_epxwb"]
[ext_resource type="Script" path="res://view_test/view.gd" id="2_rbtri"]

[node name="Main" type="Node"]
script = ExtResource("1_epxwb")

[node name="GraphEdit" type="GraphEdit" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scroll_offset = Vector2(-4, 0)

[node name="GraphNode" type="GraphNode" parent="GraphEdit" node_paths=PackedStringArray("_class_name", "_parent_class_name")]
layout_mode = 0
offset_left = 4.0
offset_right = 40.0
offset_bottom = 54.0
mouse_filter = 1
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("2_rbtri")
_class_name = NodePath("Name")
_parent_class_name = NodePath("ParentName")

[node name="Name" type="LineEdit" parent="GraphEdit/GraphNode"]
layout_mode = 2

[node name="ParentName" type="LineEdit" parent="GraphEdit/GraphNode"]
layout_mode = 2

[connection signal="position_offset_changed" from="GraphEdit/GraphNode" to="GraphEdit/GraphNode" method="_on_position_offset_changed"]
[connection signal="text_changed" from="GraphEdit/GraphNode/Name" to="GraphEdit/GraphNode" method="_on_name_text_changed"]
[connection signal="text_changed" from="GraphEdit/GraphNode/ParentName" to="GraphEdit/GraphNode" method="_on_parent_name_text_changed"]
